# iati-crates

./: .gitignore  Cargo.toml  README.md
.github/workflows/: ci.yml
crates/iati-fx/: Cargo.toml
crates/iati-fx/src/: convert.rs  lib.rs  provider.rs  table.rs
crates/iati-fx/tests/: basic.rs
crates/iati-transform/: Cargo.toml  README.md
crates/iati-transform/src/: lib.rs
crates/iati-types/: Cargo.toml  README.md
crates/iati-types/src/: lib.rs  money.rs  tx.rs
crates/iati-xml/: Cargo.toml  README.md
crates/iati-xml/examples/: parse.rs
crates/iati-xml/src/: lib.rs
