[package]
name = "iati-transform"
version = "0.1.0"
edition.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
description = "Transformations and rollups for IATI Activity data (sum by type/year/currency)."
readme = "README.md"

include = [
    "Cargo.toml",
    "README.md",
    "src/**",
    "LICENSE*",
    "COPYING*"
]

[features]
default = ["serde"]
serde = ["dep:serde", "dep:serde_json", "dep:chrono", "dep:rust_decimal", "rust_decimal/serde", "chrono/serde"]

[dependencies]
iati-types = { path = "../iati-types", version = "0.1.1", features = ["serde"] }
chrono = { version = "0.4.42", default-features = false, features = ["clock"], optional = true }
rust_decimal = { version = "1.38.0", features = ["serde"], optional = true }
serde = { version = "1.0.228", features = ["derive"], optional = true }
serde_json = { version = "1.0.145", optional = true }
thiserror = "2.0.17"

[dev-dependencies]
chrono = { version = "0.4.42", features = ["serde"] }
rust_decimal = { version = "1.38.0", features = ["serde"] }
serde_json = "1.0.145"
