[package]
name = "iati-transform"
version = "0.1.1"
edition = "2021"
description = "Transformations and rollups for IATI Activity data (sum by type/year/currency)."
license = "MIT OR Apache-2.0"
repository = "https://github.com/codywallace/iati-crates"
homepage = "https://github.com/codywallace/iati-crates"
readme = "README.md"
keywords = ["iati", "aid", "data", "transform", "development"]
categories = ["data-structures", "algorithms"]

# publish essentials
include = [
    "Cargo.toml",
    "README.md",
    "src/**",
    "LICENSE*",
    "COPYING*"
]

[features]
# Serde derives for our types (maps/structs). Off = lean core, On = serialize/deserialize.
default = ["serde"]
serde = [
    "dep:serde",
    "chrono/serde",
    "rust_decimal/serde"
]

[dependencies]
# Public API uses these types → keep non-optional
iati-types   = { version = "0.1.1", features = ["serde"] }
chrono       = "0.4.42"
rust_decimal = "1.38.0"
thiserror    = "2.0.17"

# Only needed when feature `serde` is enabled
serde        = { version = "1.0.228", features = ["derive"], optional = true }

[dev-dependencies]
serde_json   = "1.0.145"

[package.metadata.docs.rs]
all-features = true
