[package]
name = "iati-types"
version = "0.1.0"
description = "Core data types for IATI Activity v2.03: Activity, Transaction, Money, TxType, etc."

# Inherit shared values from [workspace.package]
edition.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true

[features]
# Serde-enabled types by default
default = ["serde"]
serde = [
    "dep:serde",
    "dep:serde_json",
    "dep:chrono",
    "dep:rust_decimal",
    "rust_decimal/serde",
    "chrono/serde"
]

[dependencies]
# Keep iati-types IO-free. Only basic dependencies.
chrono = { version = "0.4.42", default-features = false, features = ["clock"], optional = true }
rust_decimal = { version = "1.38.0", optional = true } # default features include serde
serde = { version = "1.0.228", features = ["derive"], optional = true }
serde_json = { version = "1.0.145", optional = true }
thiserror = "2.0.17"

[dev-dependencies]
chrono = { version = "0.4.42", features = ["serde"] }
rust_decimal = { version = "1.38.0", features = ["serde"] }
serde_json = "1.0.145"
